--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "watch": "tsc -w",
+    "server": "npm run build && http-server -d public",
     "test": "TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' mocha --require ts-node/register test/**/*.test.ts"
   },
   "author": "",
@@ -14,6 +16,7 @@
     "@types/mocha": "*",
     "@types/node": "*",
     "chai": "*",
+    "http-server": "^14.1.0",
     "mocha": "*",
     "ts-node": "*",
     "typescript": "*"
