--- a/package.json
+++ b/package.json
@@ -1,24 +1,18 @@
 {
-  "name": "name",
+  "name": "web-components-modal",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "server": "npm run build && http-server -d public",
-    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' mocha --require ts-node/register test/**/*.test.ts"
+    "server": "npm run build && http-server -d public"
   },
   "author": "",
   "license": "",
   "devDependencies": {
-    "@types/chai": "*",
-    "@types/mocha": "*",
     "@types/node": "*",
-    "chai": "*",
     "http-server": "^14.1.0",
-    "mocha": "*",
-    "ts-node": "*",
     "typescript": "*"
   }
 }
